# ChangeLog for app-misc/nut
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/nut/ChangeLog,v 1.59 2013/04/09 04:35:05 radhermit Exp $

*nut-18.7 (09 Apr 2013)

  09 Apr 2013; Tim Harder <radhermit@gentoo.org> -nut-18.6.ebuild,
  +nut-18.7.ebuild, +files/nut-18.7-fltk-linking.patch:
  Version bump, fix fltk linking, respect CXX, and remove old.

*nut-18.6 (07 Apr 2013)

  07 Apr 2013; Tim Harder <radhermit@gentoo.org> +nut-18.6.ebuild:
  Version bump.

  10 Feb 2013; Michael Palimaka <kensington@gentoo.org> -nut-18.0.ebuild,
  -nut-18.4.ebuild:
  Remove old.

  10 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nut-18.5.ebuild:
  Stable for ppc, wrt bug #456324

  09 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nut-18.5.ebuild:
  Stable for x86, wrt bug #456324

  09 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nut-18.5.ebuild:
  Stable for amd64, wrt bug #456324

*nut-18.5 (30 Jan 2013)

  30 Jan 2013; Patrick Lauer <patrick@gentoo.org> +nut-18.5.ebuild:
  Bump

  21 Nov 2012; Michael Palimaka <kensington@gentoo.org>
  -files/nut-17.7-makefile.patch, -nut-17.12.ebuild, -nut-17.7.ebuild:
  Remove old.

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> nut-18.0.ebuild:
  Stable for x86, wrt bug #441088

*nut-18.4 (19 Nov 2012)

  19 Nov 2012; Jeroen Roovers <jer@gentoo.org> +nut-18.4.ebuild:
  Version bump.

  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org> nut-18.0.ebuild:
  Stable for amd64, wrt bug #441088

  04 Nov 2012; Anthony G. Basile <blueness@gentoo.org> nut-18.0.ebuild:
  stable ppc, bug #441088

*nut-18.0 (29 Sep 2012)

  29 Sep 2012; Tim Harder <radhermit@gentoo.org> +nut-18.0.ebuild:
  Version bump.

*nut-17.12 (05 Sep 2012)

  05 Sep 2012; Jeroen Roovers <jer@gentoo.org> -files/nut-16.12-makefile.patch,
  -nut-17.5.ebuild, -files/nut-17.5-makefile.patch, +nut-17.12.ebuild,
  +files/nut-17.12-makefile.patch:
  Version bump.

  07 Jun 2012; Brent Baude <ranger@gentoo.org> nut-17.7.ebuild: